# sofa_mover

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bench_optimization.py  pyproject.toml  visualize.py
src/skrl_sofa/: agent.py  bench.py  config.py  env_wrapper.py  evaluate.py  model.py  reward_shaper.py  train.py
src/sofa_mover/: boundary.py  corridor.py  env.py  erosion.py  evaluate.py  networks.py  obs_mode.py  optimize_trajectory.py  rasterize.py  train.py
src/sofa_mover/training/: bench.py  best_tracker.py  collector.py  config.py  flamegraph.py  loop.py  normalizer.py  stack.py  train.py  utils.py
src/sofa_mover/visualization/: make_video.py  render.py  visualize.py
tests/: conftest.py  test_best_tracker.py  test_collector.py  test_corridor.py  test_env.py  test_erosion.py  test_networks.py  test_normalizer.py  test_obs_mode.py  test_optimize_trajectory.py  test_rasterize.py  test_render.py  test_skrl_stack.py  test_swept_mask.py  test_training_utils.py
