[project]
name = "sofa-mover"
version = "0.1.0"
description = "RL agent for the moving sofa problem"
requires-python = ">=3.10"
dependencies = [
    "torchrl",
    "jaxtyping",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["F722"]  # jaxtyping confuse ruff

[tool.mypy]
mypy_path = "src"
packages = ["sofa_mover"]
explicit_package_bases = true
